{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 375,
  "lineage": "7287b0ae-7656-b9ee-8b56-a61be8cc7bfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:170427903096:loadbalancer/app/my-alb/fa0fcd3e010da1d6",
            "arn_suffix": "app/my-alb/fa0fcd3e010da1d6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-16185979.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:170427903096:loadbalancer/app/my-alb/fa0fcd3e010da1d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0beb84d889bf9175a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015f2c5c6d2399c34"
              },
              {
                "subnet_id": "subnet-0659f4fde313fea16"
              },
              {
                "subnet_id": "subnet-0f6e496d8bc75dc4d"
              }
            ],
            "subnets": [
              "subnet-015f2c5c6d2399c34",
              "subnet-0659f4fde313fea16",
              "subnet-0f6e496d8bc75dc4d"
            ],
            "tags": {
              "Name": "ninja-alb"
            },
            "tags_all": {
              "Name": "ninja-alb"
            },
            "vpc_id": "vpc-0111c0f25045d6b0f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:170427903096:listener/app/my-alb/fa0fcd3e010da1d6/13751a5d88a8e4a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:170427903096:targetgroup/my-target-group/62427ea27fa82af6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:170427903096:listener/app/my-alb/fa0fcd3e010da1d6/13751a5d88a8e4a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:170427903096:loadbalancer/app/my-alb/fa0fcd3e010da1d6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.my_alb",
            "aws_alb_target_group.my_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:170427903096:targetgroup/my-target-group/62427ea27fa82af6",
            "arn_suffix": "targetgroup/my-target-group/62427ea27fa82af6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:170427903096:targetgroup/my-target-group/62427ea27fa82af6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ninja-target-group"
            },
            "tags_all": {
              "Name": "ninja-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0111c0f25045d6b0f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170427903096:security-group/sg-0beb84d889bf9175a",
            "description": "Security group for EC2 instance and ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beb84d889bf9175a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "170427903096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ninja-security-group"
            },
            "tags_all": {
              "Name": "ninja-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0111c0f25045d6b0f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}